fix: prevent layout shift for radix UI components

--- a/app/globals.css
+++ b/app/globals.css
@@ -76,8 +76,14 @@
     @apply bg-background text-foreground;
   }
   /* Prevents scrollbar from pushing content to the left */
-  html {
-    width: 100vw;
+  html,
+  body {
+    max-width: 100vw;
     overflow-x: hidden;
+  }
+  /* Prevents layout shift when using Radix UI Components */
+  /* https://github.com/radix-ui/primitives/issues/1925#issuecomment-1658633583 */
+  body[style] {
+    margin: 0 !important;
   }
 }
